--- a/uhe-website/package.json
+++ b/uhe-website/package.json
@@ -9,14 +9,18 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.4",
+    "@mui/system": "^5.14.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
