--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.14.7",
-    "@mui/material": "^5.14.4",
-    "@mui/system": "^5.14.4",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
+    "@mui/system": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.2",
-    "react-multi-carousel": "^2.8.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
@@ -49,6 +50,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.26.1"
   }
 }
