--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.1.1",
     "@mui/system": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,6 +18,7 @@
     "react-ga4": "^2.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-multi-carousel": "^2.8.5",
+    "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-swipeable-views": "^0.14.0",
